[gd_scene load_steps=45 format=2]

[ext_resource path="res://sprites/menu/visual_offset_text.png" type="Texture" id=1]
[ext_resource path="res://sprites/menu/offset_indicator_visual.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu/visual_offset_arrow_selector.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenuScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/menu/spr_sunny_background.png" type="Texture" id=5]
[ext_resource path="res://Scripts/transitionscript.gd" type="Script" id=6]
[ext_resource path="res://Scenes/rhythm_container.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/movimiento_menu.gd" type="Script" id=8]
[ext_resource path="res://sprites/menu/spr_option_selector.png" type="Texture" id=9]
[ext_resource path="res://sprites/menu_old/spr_scene1.png" type="Texture" id=10]
[ext_resource path="res://Scripts/spr_scene1.gd" type="Script" id=11]
[ext_resource path="res://sprites/menu/spr_scene2.png" type="Texture" id=12]
[ext_resource path="res://Scenes/ConsoleNode.gd" type="Script" id=13]
[ext_resource path="res://sprites/menu/Options.png" type="Texture" id=14]
[ext_resource path="res://sprites/menu/spr_volume_slider.png" type="Texture" id=15]
[ext_resource path="res://sprites/menu/spr_control_mode.png" type="Texture" id=16]
[ext_resource path="res://sprites/menu/Offset.png" type="Texture" id=17]
[ext_resource path="res://sprites/menu/spr_menu_nw_edition.png" type="Texture" id=18]
[ext_resource path="res://sprites/menu/spr_characterSelect.png" type="Texture" id=19]
[ext_resource path="res://sprites/menu/spr_back.png" type="Texture" id=20]
[ext_resource path="res://sprites/menu/audio_offset_calibration.png" type="Texture" id=21]
[ext_resource path="res://Scenes/inputmapper.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scripts/spr_control_mode.gd" type="Script" id=23]
[ext_resource path="res://Scenes/CharacterSelectHandler.gd" type="Script" id=24]
[ext_resource path="res://sprites/menu/spr_consolehint.png" type="Texture" id=25]
[ext_resource path="res://Scripts/AudioStreamPlayerMainMenu.gd" type="Script" id=26]
[ext_resource path="res://Scripts/ActualPlayer.gd" type="Script" id=27]
[ext_resource path="res://Music/mus_tutorial.ogg" type="AudioStream" id=28]
[ext_resource path="res://Scripts/Rythm.gd" type="Script" id=29]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=30]
[ext_resource path="res://sprites/tilesets/World_1/World1New.tres" type="TileSet" id=31]
[ext_resource path="res://Scripts/offsetCalibration.gd" type="Script" id=32]
[ext_resource path="res://sprites/menu/spr_fullscreenhint.png" type="Texture" id=33]
[ext_resource path="res://sprites/menu/spr_cancel.png" type="Texture" id=34]
[ext_resource path="res://sprites/menu/spr_save.png" type="Texture" id=35]
[ext_resource path="res://sprites/menu/spr_mute.png" type="Texture" id=36]
[ext_resource path="res://sprites/menu/spr_muteicon.png" type="Texture" id=37]
[ext_resource path="res://Fonts/thirteen-pixel-fonts.regular.ttf" type="DynamicFontData" id=38]

[sub_resource type="Animation" id=1]
resource_name = "fad3"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("spr_scene1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("spr_scene1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 3.0

[sub_resource type="Animation" id=5]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("spr_scene1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spr_scene1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.2, 3.8, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 38 )

[node name="menu" type="Node2D"]

[node name="spr_background" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
scale = Vector2( 2, 2 )
tile_set = ExtResource( 31 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -196615, 536870919, 0, -196614, 536870917, 0, -196613, 5, 0, -196612, 7, 0, -196611, 26, 0, -196610, 26, 0, -196609, 26, 0, -262144, 26, 0, -262143, 26, 0, -262142, 26, 0, -262141, 536870919, 0, -262140, 536870917, 0, -262139, 536870917, 0, -262138, 7, 0, -131079, 11, 0, -131078, 10, 0, -131077, 10, 0, -131076, 536870923, 0, -196605, 11, 0, -196604, 9, 0, -196603, 536870922, 0, -196602, 536870923, 0, -65543, 12, 0, -65542, 13, 0, -65541, 14, 0, -65540, 15, 0, -131069, 12, 0, -131068, 13, 0, -131067, 14, 0, -131066, 536870924, 0, -7, 26, 0, -6, 26, 0, -5, 26, 0, -4, 26, 0, -3, 16, 0, -2, 17, 0, -1, 18, 0, -65536, 17, 0, -65535, 18, 0, -65534, 19, 0, -65533, 26, 0, -65532, 26, 0, -65531, 26, 0, -65530, 26, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="spr_scene1" type="Sprite" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 478.489, 267 )
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="CanvasLayer"]
current = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -148.495
margin_top = -120.0
margin_right = 1043.51
margin_bottom = 624.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/fad3 = SubResource( 1 )
anims/fade = SubResource( 2 )
anims/fade2 = SubResource( 3 )
anims/mus_Stop = SubResource( 4 )
anims/scene2 = SubResource( 5 )

[node name="MainMenuScreen" parent="." instance=ExtResource( 4 )]

[node name="spr_consolehint" type="Sprite" parent="MainMenuScreen"]
position = Vector2( 322.496, 258.522 )
scale = Vector2( 2, 2 )
texture = ExtResource( 25 )

[node name="CharacterSelectScreen" type="Node2D" parent="."]
visible = false
script = ExtResource( 24 )

[node name="spr_characterSelect" type="Sprite" parent="CharacterSelectScreen"]
position = Vector2( 0, 0.0625 )
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
hframes = 2

[node name="spr_cancel" type="Sprite" parent="CharacterSelectScreen"]
position = Vector2( -461.964, 251.005 )
texture = ExtResource( 34 )

[node name="ColorRect" type="ColorRect" parent="CharacterSelectScreen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -544.0
margin_top = -296.0
margin_right = 552.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Node2D" parent="."]
visible = false

[node name="spr_volume_slider" type="Sprite" parent="options"]
position = Vector2( 0, -107.819 )
texture = ExtResource( 15 )
hframes = 5
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="options/spr_volume_slider"]

[node name="spr_control_mode" type="Sprite" parent="options"]
position = Vector2( 0, 19.3112 )
texture = ExtResource( 16 )
hframes = 2
script = ExtResource( 23 )

[node name="spr_menu_nw_edition" type="Sprite" parent="options"]
position = Vector2( 371.489, 257.506 )
texture = ExtResource( 18 )

[node name="Offset" type="Sprite" parent="options"]
position = Vector2( 0, 132.271 )
texture = ExtResource( 17 )

[node name="spr_back" type="Sprite" parent="options"]
position = Vector2( 0, 218.702 )
texture = ExtResource( 20 )

[node name="Options" type="Sprite" parent="options"]
position = Vector2( 0, -210.776 )
texture = ExtResource( 14 )

[node name="spr_fullscreenhint" type="Sprite" parent="options"]
position = Vector2( -320.459, 258.494 )
scale = Vector2( 2, 2 )
texture = ExtResource( 33 )

[node name="VisualOffsetCalibrationScreen" type="Node2D" parent="."]
visible = false
script = ExtResource( 32 )

[node name="RichTextLabel" type="RichTextLabel" parent="VisualOffsetCalibrationScreen"]
margin_left = 8.0
margin_top = 144.0
margin_right = 296.0
margin_bottom = 272.0
custom_fonts/normal_font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_offset_calibration" type="Sprite" parent="VisualOffsetCalibrationScreen"]
visible = false
position = Vector2( 0, -47.6888 )
texture = ExtResource( 21 )
hframes = 3
vframes = 2

[node name="offset_indicator_visual" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( 0, 53 )
texture = ExtResource( 2 )

[node name="visual_offset_text" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( -112, 182.271 )
texture = ExtResource( 1 )

[node name="visual_offset_arrow_selector" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( 0, 101.445 )
texture = ExtResource( 3 )

[node name="spr_cancel" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( -480, 232 )
texture = ExtResource( 34 )
centered = false

[node name="spr_save" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( 0, -256 )
texture = ExtResource( 35 )

[node name="spr_mute" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( 0, 256 )
texture = ExtResource( 36 )

[node name="spr_muteicon" type="Sprite" parent="VisualOffsetCalibrationScreen"]
position = Vector2( 443.991, 232 )
texture = ExtResource( 37 )
centered = false
hframes = 2

[node name="spr_flecha" type="Sprite" parent="."]
position = Vector2( 296, 88 )
texture = ExtResource( 9 )
script = ExtResource( 8 )

[node name="controls" parent="." instance=ExtResource( 22 )]

[node name="Rythm" type="CanvasLayer" parent="."]
script = ExtResource( 29 )

[node name="rhythm_container" parent="Rythm" instance=ExtResource( 7 )]
visible = false
anchor_right = 1.0
margin_top = 192.0
margin_bottom = 192.0

[node name="Player" parent="." instance=ExtResource( 30 )]
visible = false
position = Vector2( -88, -144 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
script = ExtResource( 26 )

[node name="ActualPlayer" type="AudioStreamPlayer" parent="AudioStreamPlayer2"]
stream = ExtResource( 28 )
script = ExtResource( 27 )

[node name="ConsoleNode" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -544.0
margin_top = -296.0
margin_right = 552.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
